FullQa New/src/objects/Invoice_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>AssignedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Invoice_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Case_CaseSafeID__c</fullName>
        <formula>AssignedCase__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Case CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipName>Invoice_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Email__c</fullName>
        <formula>AssignedCase__r.Contact.Email</formula>
        <label>Case Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name__c</fullName>
        <formula>AssignedCase__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(AssignedCase__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_effort__c</fullName>
        <formula>AssignedCase__r.Collection_Effort__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ICP_Audit__c</fullName>
        <formula>Assigned_Invoice__r.ICP_Audit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICP Audit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <formula>Assigned_Invoice__r.Zuora__Balance2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <formula>Assigned_Invoice__r.Due_Date_ICP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_ICP_Status__c</fullName>
        <formula>Assigned_Invoice__r.ICP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice ICP Status</label>
        <type>Text</type>
    </fields>
    <label>Invoice Case Assignment</label>
    <nameField>
        <displayFormat>IAN-{00000000}</displayFormat>
        <label>Invoice Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Case Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>